results/SVCOMP/specgen/log-ExMIT-2024_03_04_04_36_35.txt
import java.util.Random;

public class ExMIT {
    //@ requires \random.nextInt() == 1 ==> i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ ensures \result == 0 <==> (i + 1) * 2 <= 10;
    //@ ensures \result == 1 <==> (i + 1) * 2 > 10;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: This backslash token is unknown: \random
    //@ requires \random.nextInt() == 1 ==> i == 0;
                 ^
1 error

import java.util.Random;

public class ExMIT {
    //@ requires new Random().nextInt() == 1 ==> i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ ensures \result == 0 <==> (i + 1) * 2 <= 10;
    //@ ensures \result == 1 <==> (i + 1) * 2 > 10;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: Object allocation is not permitted in specification expressions
    //@ requires new Random().nextInt() == 1 ==> i == 0;
                 ^
1 error

import java.util.Random;

public class ExMIT {
    //@ requires i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ ensures \result == 0 <==> (i + 1) * 2 <= 10;
    //@ ensures \result == 1 <==> (i + 1) * 2 > 10;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}

